# docs/swagger.yaml
@@ -372,6 +372,36 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 删除标签
+  /auth:
+    post:
+      parameters:
+      - description: 用户名
+        in: formData
+        name: app_key
+        required: true
+        type: string
+      - description: 密码
+        in: formData
+        name: app_secret
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取 JWT 验证字符串
   /upload/file:
     post:
       parameters:
