# internal/routers/api/auth.go
@@ -1,0 +1,37 @@
+package api
+
+import (
+	"blog-service/global"
+	"blog-service/internal/service"
+	"blog-service/pkg/app"
+	"blog-service/pkg/errcode"
+	"github.com/gin-gonic/gin"
+)
+
+func GetAuth(c *gin.Context) {
+	param := service.AuthRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Error()))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.CheckAuth(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.CheckAuth err: %v", err)
+		response.ToErrorResponse(errcode.UnauthorizedAuthNotExists)
+		return
+	}
+	token, err := app.GenerateToken(param.AppKey, param.AppSecret)
+	if err != nil {
+		global.Logger.Errorf("app.GenerateToken err: %v", err)
+		response.ToErrorResponse(errcode.UnauthorizedTokenGenerate)
+		return
+	}
+	response.ToResponse(gin.H{
+		"token": token,
+	})
+}
